# forge-backend-framework

./: .gitignore  00-MASTER-AGENT-PROMPT.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  forge.toml  forge_plugin_v1.proto  install.sh  release-targets.toml  test_committed_backend.sh  test_committed_round_trip.sh  test_example_backend.sh  test_gateway_features.sh  test_kill_resilience.sh  test_offline_build.sh  test_round_trip.sh  test_scaffolding.sh  test_tutorial.sh
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: main.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: kernel.rs  lib.rs
crates/forge-core/src/bus/: mod.rs
crates/forge-core/src/config/: mod.rs
crates/forge-core/src/lifecycle/: manager.rs  mod.rs
crates/forge-core/src/registry/: mod.rs
crates/forge-core/tests/: failure_injection.rs  lifecycle_integration.rs  performance_benchmarks.rs  stress_tests.rs
crates/forge-gateway/: Cargo.toml
crates/forge-gateway/src/: grpc.rs  http.rs  lib.rs
crates/forge-plugin-sdk-rust/: Cargo.toml
crates/forge-plugin-sdk-rust/src/: lib.rs
crates/forge-proto/: Cargo.toml  build.rs
crates/forge-proto/src/: lib.rs
docs/: 01-PRD.md  02-TRD.md  03-architecture-spec.md  04-plugin-protocol-spec.md  05-build-distribution-spec.md  06-operators-guide.md  07-plugin-developers-guide.md  08-BUILD-ORDER-ADDENDUM.md  09-VERIFICATION-AND-RELEASE.md  10-USAGE-GUIDE.md  11-BUILDING-A-SYSTEM.md
examples/custom-capability/: Cargo.toml  plugin.forge.toml
examples/custom-capability/src/: main.rs
examples/echo-rs/: Cargo.toml
examples/echo-rs/src/: main.rs
examples/embedded-minimal/: Cargo.toml
examples/embedded-minimal/src/: main.rs
examples/example-backend/: forge.toml  start.sh
examples/example-backend/plugins/auth-jwt/: plugin.forge.toml
examples/example-backend/plugins/data-sqlite/: plugin.forge.toml
examples/example-backend/plugins/echo-rs/: plugin.forge.toml
examples/middleware-plugin/: Cargo.toml  plugin.forge.toml
examples/middleware-plugin/src/: main.rs
examples/multi-plugin/pipeline/: Cargo.toml  plugin.forge.toml
examples/multi-plugin/pipeline/src/: main.rs
examples/multi-plugin/upper/: Cargo.toml  plugin.forge.toml
examples/multi-plugin/upper/src/: main.rs
examples/streaming-plugin/: Cargo.toml  plugin.forge.toml
examples/streaming-plugin/src/: main.rs
examples/tutorial/: forge.toml  start.sh
examples/tutorial/count/: Cargo.toml
examples/tutorial/count/src/: main.rs
examples/tutorial/ingest/: Cargo.toml
examples/tutorial/ingest/src/: main.rs
examples/tutorial/plugins/count/: plugin.forge.toml
examples/tutorial/plugins/ingest/: plugin.forge.toml
examples/tutorial/process/: Cargo.toml  plugin.forge.toml
examples/tutorial/process/src/: main.rs
examples/tutorial/store/: Cargo.toml  plugin.forge.toml
examples/tutorial/store/src/: main.rs
forge/: Cargo.toml  build.rs
forge/src/: bus.rs  config.rs  kernel.rs  lib.rs  lifecycle.rs  registry.rs  sdk.rs
forge/src/gateway/: grpc.rs  http.rs  mod.rs
forge/src/lifecycle/: manager.rs
forge/tests/: failure_injection.rs  lifecycle_integration.rs  performance_benchmarks.rs  stress_tests.rs
plugins-official/forge-plugin-auth-jwt/: Cargo.toml
plugins-official/forge-plugin-auth-jwt/src/: main.rs
plugins-official/forge-plugin-data-sqlite/: Cargo.toml
plugins-official/forge-plugin-data-sqlite/src/: main.rs
plugins-official/forge-plugin-echo-py/: forge_plugin_v1_pb2.py  forge_plugin_v1_pb2_grpc.py  plugin.forge.toml  plugin.py
plugins-official/forge-plugin-http-router/: Cargo.toml  plugin.forge.toml
plugins-official/forge-plugin-http-router/src/: main.rs
redirect/forge-backend/: Cargo.toml  README.md
redirect/forge-backend/src/: lib.rs
redirect/forge-plugin-sdk-rust/: Cargo.toml  README.md
redirect/forge-plugin-sdk-rust/src/: lib.rs
redirect/forge-proto/: Cargo.toml  README.md
redirect/forge-proto/src/: lib.rs
systemd/: forge.service
