[workspace]
resolver = "2"
members = [
    "crates/forge-proto",
    "crates/forge-core",
    "crates/forge-gateway",
    "crates/forge-cli",
    "crates/forge-plugin-sdk-rust",
    "examples/echo-rs",
    "examples/embedded-minimal",
    "examples/streaming-plugin",
    "examples/custom-capability",
    "examples/middleware-plugin",
    "examples/multi-plugin/upper",
    "examples/multi-plugin/pipeline",
    "plugins-official/forge-plugin-auth-jwt",
    "plugins-official/forge-plugin-data-sqlite",
    "plugins-official/forge-plugin-http-router",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
dashmap = "6"
tracing = "0.1"
semver = { version = "1", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
bytes = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
hyper = "1"
rustls = "0.23"
