[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge = { path = "../forge" }
tokio.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
