[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description = "Forge CLI — runtime and tooling for the Forge backend operating environment"
repository = "https://github.com/patchyevolve/forge-backend-framework"

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge = { package = "forgecore-backend-framework-daemon", version = "1.0", path = "../forge" }
tokio.workspace = true
clap = { workspace = true, features = ["derive"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
