[package]
name = "forge-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[dependencies]
forge-backend = { path = "../forge-core" }
forge-gateway = { path = "../forge-gateway" }
forge-proto = { path = "../forge-proto" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rustls.workspace = true
