[package]
name = "forge-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-core = { path = "../forge-core" }
forge-proto = { path = "../forge-proto" }
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
hyper.workspace = true
bytes.workspace = true
base64.workspace = true
semver.workspace = true
uuid.workspace = true
