[package]
name = "forge-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge-backend = { path = "../forge-core" }
forge-proto = { path = "../forge-proto" }
tokio.workspace = true
tonic = { workspace = true, features = ["tls", "tls-webpki-roots"] }
prost.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
anyhow.workspace = true
hyper.workspace = true
bytes.workspace = true
base64.workspace = true
semver.workspace = true
uuid.workspace = true
tower-http.workspace = true
hyper-util = "0.1"
tokio-rustls = "0.26"
rustls-pemfile = "2"
rustls = "0.23"
prometheus.workspace = true
