[package]
name = "forge-plugin-sdk-rust"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust SDK for writing Forge plugins"
repository = "https://github.com/anomalyco/forge"

[dependencies]
forge-proto = { version = "1.0", path = "../forge-proto" }
tonic.workspace = true
tokio.workspace = true
async-trait = "0.1"
anyhow.workspace = true
tracing.workspace = true
tokio-stream.workspace = true
