[package]
name = "forge-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generated protobuf stubs for the Forge plugin protocol"
repository = "https://github.com/patchyevolve/forge-backend-framework"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dependencies]
tonic.workspace = true
prost.workspace = true
