[package]
name = "forge-plugin-echo-rs"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
forge = { package = "forgecore-backend-framework-daemon", path = "../../forge" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
