[package]
name = "forge-example-middleware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge = { path = "../../forge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
