[package]
name = "forge-example-streaming"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
forge = { package = "forgecore-backend-framework-daemon", path = "../../forge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
