[package]
name = "forge-plugin-data-sqlite"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
forge = { path = "../../forge" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite = { version = "0.31", features = ["bundled"] }
