[package]
name = "tutorial-ingest"
version = "1.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
forge = { path = "../../../forge" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
