[package]
name = "tutorial-process"
version = "1.0.0"
edition.workspace = true
license-file.workspace = true

[dependencies]
forge = { package = "forgecore-backend-framework-daemon", path = "../../../forge" }
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
